--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,68 @@ body {
 }
 .about p {
     line-height: 170%;
+
+    animation-name: bg1;
+    animation-duration: 10s;
+    animation-timing-function: linear;
+    animation-delay: 3s;
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
+    animation-play-state: running;
+    /* Safari and Chrome: */
+    -webkit-animation-name: bg1;
+    -webkit-animation-duration: 10s;
+    -webkit-animation-timing-function: linear;
+    -webkit-animation-delay: 3s;
+    -webkit-animation-iteration-count: infinite;
+    -webkit-animation-direction: alternate;
+    -webkit-animation-play-state: running;
+    /* Firefox: */
+    -moz-animation-name: bg1;
+    -moz-animation-duration: 10s;
+    -moz-animation-timing-function: linear;
+    -moz-animation-delay: 3s;
+    -moz-animation-iteration-count: infinite;
+    -moz-animation-direction: alternate;
+    -moz-animation-play-state: running;
+    /* Opera: */
+    -o-animation-name: bg1;
+    -o-animation-duration: 10s;
+    -o-animation-timing-function: linear;
+    -o-animation-delay: 3s;
+    -o-animation-iteration-count: infinite;
+    -o-animation-direction: alternate;
+    -o-animation-play-state: running; }
+
+    @-moz-keyframes bg1 /* Firefox */ {
+    0% {
+    color: #fff; }
+    50% {
+    color: #BD10E0; }
+    100% {
+    color: #50E3C2; } }
+    @-webkit-keyframes bg1 /* Safari and Chrome */ {
+    0% {
+    color: #fff; }
+    50% {
+    color: #BD10E0; }
+    100% {
+    color: #50E3C2; } }
+    @-o-keyframes bg1 /* Opera */ {
+    0% {
+    color: #fff; }
+    50% {
+    color: #BD10E0; }
+    100% {
+    color: #50E3C2; } }
+    @keyframes bg1 {
+    0% {
+    color: #fff; }
+    50% {
+    color: #BD10E0; }
+    100% {
+    color: #50E3C2; } }
+    }
 }
 .about p span {
     font-weight: bold;
@@ -68,7 +130,7 @@ body {
     }
 
 .color {
-animation-name: bg;
+    animation-name: bg;
     animation-duration: 10s;
     animation-timing-function: linear;
     animation-delay: 3s;
