--- a/css/style.css
+++ b/css/style.css
@@ -12,74 +12,22 @@ body {
     margin: 0 auto;
     padding: 0 2em;
 }
+.about {
+    padding: 2em;
+}
 .about p {
     line-height: 170%;
-
-    animation-name: bg1;
-    animation-duration: 10s;
-    animation-timing-function: linear;
-    animation-delay: 3s;
-    animation-iteration-count: infinite;
-    animation-direction: alternate;
-    animation-play-state: running;
-    /* Safari and Chrome: */
-    -webkit-animation-name: bg1;
-    -webkit-animation-duration: 10s;
-    -webkit-animation-timing-function: linear;
-    -webkit-animation-delay: 3s;
-    -webkit-animation-iteration-count: infinite;
-    -webkit-animation-direction: alternate;
-    -webkit-animation-play-state: running;
-    /* Firefox: */
-    -moz-animation-name: bg1;
-    -moz-animation-duration: 10s;
-    -moz-animation-timing-function: linear;
-    -moz-animation-delay: 3s;
-    -moz-animation-iteration-count: infinite;
-    -moz-animation-direction: alternate;
-    -moz-animation-play-state: running;
-    /* Opera: */
-    -o-animation-name: bg1;
-    -o-animation-duration: 10s;
-    -o-animation-timing-function: linear;
-    -o-animation-delay: 3s;
-    -o-animation-iteration-count: infinite;
-    -o-animation-direction: alternate;
-    -o-animation-play-state: running; }
-
-    @-moz-keyframes bg1 /* Firefox */ {
-    0% {
-    color: #fff; }
-    50% {
-    color: #BD10E0; }
-    100% {
-    color: #50E3C2; } }
-    @-webkit-keyframes bg1 /* Safari and Chrome */ {
-    0% {
-    color: #fff; }
-    50% {
-    color: #BD10E0; }
-    100% {
-    color: #50E3C2; } }
-    @-o-keyframes bg1 /* Opera */ {
-    0% {
-    color: #fff; }
-    50% {
-    color: #BD10E0; }
-    100% {
-    color: #50E3C2; } }
-    @keyframes bg1 {
-    0% {
-    color: #fff; }
-    50% {
-    color: #BD10E0; }
-    100% {
-    color: #50E3C2; } }
-    }
 }
 .about p span {
     font-weight: bold;
     text-decoration: underline;
+}
+.countries p {
+    font-style: italic;
+    color: #666;
+    font-size: 80%;
+    text-align: center;
+    padding-bottom: 2em;
 }
 .color {
     width:217px;
@@ -111,6 +59,7 @@ body {
     height: 45px;
     text-align: center;
     position: absolute;
+    transition: all 0.2s ease-in-out;
 }
     .dribbble {
         top: 73px;
@@ -127,6 +76,65 @@ body {
     .facebook {
         top: 73px;
         right: 52px;
+    }
+
+    .video {
+        display: block;
+        width: 100%;
+        height: 350px;
+        background: #50E3C2;
+    }
+    .social:hover {
+        top: 68px;
+    }
+
+.shape {
+    display: block;
+    position: absolute;
+}
+    .triangule {
+        width: 0;
+        height: 0;
+        border: 8.5rem solid transparent;
+        border-top: 0rem solid transparent;
+        border-bottom: 12rem solid #BD10E0;
+        left: -50px;
+        top: 0;
+        transform: rotate(90deg);
+    }
+    .circle {
+        width: 11rem;
+        height: 11rem;
+        border-radius: 100%;
+        background: #D0021B;
+        mix-blend-mode: screen;
+        left: 20px;
+        top: 0;
+        animation: ginga 1s alternate infinite;
+    }
+    @keyframes ginga {
+        0% { height: 10.5rem;}
+        100% { top: 20px; }
+    }
+    .square-outer {
+        display: block;
+        width: 25rem;
+        height: 40rem;
+        position: absolute;
+        overflow: hidden;
+        right: 0;
+        bottom: -20rem;
+    }
+    .square {
+        width: 20rem;
+        height: 20rem;
+        background: #50E3C2;
+        animation: quadrado 25s linear infinite;
+        right: -15rem;
+        top: 6rem;
+    }
+    @keyframes quadrado {
+        100% { transform: rotate(360deg); }
     }
 
 .color {
