--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,11 @@ body {
     color: #333;
     font-family: 'PT Mono', monospace;
 }
+
+.video span {
+    display: block;
+}
+
 .main-content {
     max-width: 700px;
     margin: 0 auto;
@@ -76,16 +81,34 @@ body {
         top: 73px;
         right: 52px;
     }
-
-    .video {
-        display: block;
-        width: 100%;
-        height: 350px;
-        background: #50E3C2;
-    }
     .social:hover {
         top: 68px;
     }
+
+.video {
+    display: block;
+    position: relative;
+}
+.video-overlay {
+    display: block;
+    width: 700px;
+    height: 360px;
+    background: #50E3C2;
+    position: absolute;
+    top: 0;
+    cursor: pointer;
+    transition: all 1s ease-in-out;
+    text-align: center;
+    font-size: 4em;
+    color: #fff;
+}
+    .video-overlay .fa {
+        margin-top: 150px;
+    }
+.hide {
+    visibility: hidden;
+}
+
 
 .social-icon {
     fill: #333;
