--- a/css/style.css
+++ b/css/style.css
@@ -98,13 +98,19 @@ body {
     top: 0;
     cursor: pointer;
     transition: all 1s ease-in-out;
-    text-align: center;
-    font-size: 4em;
-    color: #fff;
 }
     .video-overlay .fa {
-        margin-top: 150px;
+        text-align: center;
+        font-size: 4em;
+        color: #fff;
+        width: 60px;
+        height: 60px;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        margin: -30px 0 0 -30px;
     }
+
 .hide {
     visibility: hidden;
 }
