--- a/css/style.css
+++ b/css/style.css
@@ -91,24 +91,27 @@ body {
 }
 .video-overlay {
     display: block;
-    width: 700px;
+    width: 100%;
     height: 360px;
     background: #50E3C2;
     position: absolute;
     top: 0;
     cursor: pointer;
-    transition: all 1s ease-in-out;
 }
     .video-overlay .fa {
         text-align: center;
         font-size: 4em;
-        color: #fff;
+        color: #39C7A7;
         width: 60px;
         height: 60px;
         position: absolute;
         top: 50%;
         left: 50%;
         margin: -30px 0 0 -30px;
+        transition: all .2s ease-in-out;
+    }
+    .video-overlay:hover .fa {
+        color: #fff;
     }
 
 .hide {
